--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.13.2",
     "apscheduler>=3.11.1",
+    "ccxt>=4.5.24",
     "certifi>=2025.11.12",
     "duckdb>=1.4.2",
     "fastapi[standard]>=0.121.3",
