feat(资产池管理): 添加资产池管理功能及相关组件
refactor(数据库): 重构数据库连接管理以避免循环导入

perf(任务管理): 改进任务进度更新机制，增加详细状态描述

fix(配置管理): 修复配置加载中的循环导入问题

test(增量更新): 添加数据增量更新功能的测试用例

chore(依赖): 更新pyproject.toml添加duckdb-engine依赖

style(前端): 统一资产池组件样式和布局

docs(注释): 更新代码注释和文档说明

--- a/backend/config.yaml
+++ b/backend/config.yaml
@@ -1,6 +1,6 @@
 # 数据库配置
 database:
-  type: sqlite  # 数据库类型：duckdb 或 sqlite
+  type: duckdb  # 数据库类型：duckdb 或 sqlite
   file: data/qbot.db  # 数据库文件路径
 
 # 应用配置
