--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "ccxt>=4.5.24",
     "certifi>=2025.11.12",
     "duckdb>=1.4.2",
+    "duckdb-engine>=0.17.0",
     "fastapi[standard]>=0.121.3",
     "fire>=0.7.1",
     "flake8>=7.3.0",
