--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.13.2",
     "apscheduler>=3.11.1",
+    "catboost>=1.2.8",
     "ccxt>=4.5.24",
     "certifi>=2025.11.12",
     "duckdb>=1.4.2",
@@ -22,6 +23,11 @@ dependencies = [
     "pyqlib>=0.9.7",
     "pytest>=9.0.1",
     "sqlalchemy>=2.0.35",
+    "statsmodels>=0.14.6",
+    "torch>=2.9.1",
+    "torchaudio>=2.9.1",
+    "torchvision>=0.24.1",
     "tqdm>=4.67.1",
     "uvicorn>=0.38.0",
+    "xgboost>=3.1.2",
 ]
