feat(k线图表): 添加k线图表功能页面及路由配置
- 新增klinecharts依赖库
- 创建ChartPage组件实现k线图表展示及交互
- 添加导航菜单项和路由配置
- 实现图表数据加载、指标选择和配置功能

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "echarts": "^6.0.0",
     "element-plus": "^2.11.9",
+    "klinecharts": "^10.0.0-beta1",
     "pinia": "^3.0.4",
     "vue": "^3.5.13",
     "vue-router": "^4.6.3"
