feat(数据可视化): 添加K线数据获取和展示功能
- 后端添加K线数据API接口和数据库查询服务
- 前端实现K线数据获取和表格展示功能
- 添加软删除字段is_deleted到加密货币对表
- 配置Alembic数据库迁移工具
- 更新相关依赖和锁文件

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.13.2",
+    "alembic>=1.17.2",
     "apscheduler>=3.11.1",
     "catboost>=1.2.8",
     "ccxt>=4.5.24",
