--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -14,6 +14,8 @@
     "vitest": "vitest"
   },
   "dependencies": {
+    "@ant-design/icons": "6.x",
+    "@klinecharts/pro": "^0.1.1",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-log": "^2.7.1",
     "@tauri-apps/plugin-opener": "^2.5.2",
