--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -22,6 +22,7 @@
     "@tauri-apps/plugin-shell": "^2.3.3",
     "antd": "^6.1.2",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "echarts-for-react": "^3.0.5",
     "klinecharts": "^10.0.0-beta1",
     "react": "^19.2.0",
