feat(前端): 添加TokenDisplay组件并优化图表页面
添加@web3icons/react依赖用于显示代币图标
创建TokenDisplay组件处理图标加载和错误状态
在图表页面使用TokenDisplay组件显示代币图标
添加用户偏好本地存储功能
优化图表容器样式和间距

--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -20,6 +20,7 @@
     "@tauri-apps/plugin-log": "^2.7.1",
     "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-shell": "^2.3.3",
+    "@web3icons/react": "^4.1.9",
     "antd": "^6.1.2",
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
