--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiohttp>=3.13.2",
     "alembic>=1.17.2",
     "apscheduler>=3.11.1",
+    "backtesting>=0.3.3",
     "catboost>=1.2.8",
     "ccxt>=4.5.24",
     "certifi>=2025.11.12",
