feat(i18n): 添加国际化支持
- 添加前端i18n配置和语言文件
- 添加后端国际化支持和语言文件转换工具
- 更新前后端依赖以支持国际化功能
- 修改UI组件以使用国际化文本
- 添加中英文语言资源文件

--- a/backtest_script/test_config.yaml
+++ b/backtest_script/test_config.yaml
@@ -4,7 +4,7 @@
 symbol: BTCUSDT
 
 # 回测时间范围
-start_time: "2025-08-01"
+start_time: "2025-01-01"
 end_time: "2025-12-05"
 
 # 策略配置
@@ -22,10 +22,10 @@ data:
 
 # 回测配置
 backtest:
-  initial_cash: 10000  # 初始资金
+  initial_cash: 1000  # 初始资金
   commission: 0.001     # 手续费率
 
 # 输出配置
 output:
   path: ./results/test_result.json
-  format: console  # json 或 console
+  format: json  # json 或 console
