--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "certifi>=2025.11.12",
     "duckdb>=1.4.2",
     "duckdb-engine>=0.17.0",
+    "fastapi-i18n>=0.12.0",
     "fastapi[standard]>=0.121.3",
     "fire>=0.7.1",
     "flake8>=7.3.0",
@@ -22,6 +23,7 @@ dependencies = [
     "mypy>=1.18.2",
     "pandas>=2.3.3",
     "plotly>=6.5.0",
+    "polib>=1.2.0",
     "pyqlib>=0.9.7",
     "pytest>=9.0.1",
     "sqlalchemy>=2.0.35",
