--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,12 @@
     "axios": "^1.13.2",
     "dayjs": "^1.11.19",
     "echarts-for-react": "^3.0.5",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "klinecharts": "^10.0.0-beta1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.1",
     "react-router-dom": "^7.11.0",
     "zustand": "^5.0.9"
   },
