--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "6.x",
-    "@klinecharts/pro": "^0.1.1",
     "@monaco-editor/react": "^4.7.0",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-log": "^2.7.1",
@@ -28,7 +27,7 @@
     "echarts-for-react": "^3.0.5",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
-    "klinecharts": "^10.0.0-beta1",
+    "klinecharts": "^9.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.1",
