--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,5 +33,6 @@ dependencies = [
     "torchvision>=0.24.1",
     "tqdm>=4.67.1",
     "uvicorn>=0.38.0",
+    "vectorbt>=0.28.2",
     "xgboost>=3.1.2",
 ]
