--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "echarts-for-react": "^3.0.5",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
-    "klinecharts": "^9.0.0",
+    "klinecharts": "^10.0.0-beta1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.1",
