feat(前端): 添加Bun开发服务器支持
添加server.ts作为Bun开发服务器实现，支持静态文件服务和API代理
在package.json中添加serve脚本命令

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "vitest": "vitest"
+    "vitest": "vitest",
+    "serve": "bun run server.ts"
   },
   "dependencies": {
     "@ant-design/icons": "6.x",
