feat(proxy): 添加代理支持并增强实时引擎稳定性
添加aiohttp-socks和python-socks依赖以支持代理功能
在BinanceWebSocketClient中添加代理配置选项
增强实时引擎的启动和停止逻辑，添加错误处理
在SystemConfig组件中修复代理开关状态绑定
优化WebSocketManager的客户端注册逻辑，支持强制替换
添加详细的日志记录以帮助调试实时引擎初始化

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiohttp>=3.13.2",
+    "aiohttp-socks>=0.11.0",
     "alembic>=1.17.2",
     "apscheduler>=3.11.1",
     "backtesting>=0.3.3",
@@ -26,6 +27,7 @@ dependencies = [
     "polib>=1.2.0",
     "pyqlib>=0.9.7",
     "pytest>=9.0.1",
+    "python-socks>=2.8.0",
     "sqlalchemy>=2.0.35",
     "statsmodels>=0.14.6",
     "ta-lib>=0.6.8",
