--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "plotly>=6.5.0",
     "polib>=1.2.0",
     "pyqlib>=0.9.7",
+    "pysocks>=1.7.1",
     "pytest>=9.0.1",
     "python-socks>=2.8.0",
     "sqlalchemy>=2.0.35",
