feat: 添加Binance和OKX交易所连接器及功能实现
refactor(backend/exchange): 重构交易所模块结构，添加Binance和OKX实现
feat(backend/exchange/binance): 实现Binance WebSocket连接器及示例
feat(backend/exchange/okx): 添加OKX交易所连接器及工具类
fix(frontend): 优化数据管理页面任务加载逻辑
style: 清理无用代码和空文件
test: 添加交易所连接测试用例
chore: 更新依赖项配置

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "alembic>=1.17.2",
     "apscheduler>=3.11.1",
     "backtesting>=0.3.3",
+    "binance-sdk-derivatives-trading-usds-futures>=6.2.0",
+    "binance-sdk-spot>=6.3.0",
     "catboost>=1.2.8",
     "ccxt>=4.5.24",
     "certifi>=2025.11.12",
