feat(security): 添加JWT认证功能并保护关键API接口
实现JWT令牌生成、验证和刷新功能
添加JWT认证装饰器保护所有删除操作接口
前端添加令牌管理和请求拦截器
更新依赖项以支持JWT和加密功能

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "alembic>=1.17.2",
     "apscheduler>=3.11.1",
     "backtesting>=0.3.3",
+    "bcrypt>=5.0.0",
     "binance-sdk-derivatives-trading-usds-futures>=6.2.0",
     "binance-sdk-spot>=6.3.0",
     "catboost>=1.2.8",
@@ -25,11 +26,14 @@ dependencies = [
     "loguru>=0.7.3",
     "mypy>=1.18.2",
     "pandas>=2.3.3",
+    "passlib>=1.7.4",
     "plotly>=6.5.0",
     "polib>=1.2.0",
+    "pyjwt>=2.10.1",
     "pyqlib>=0.9.7",
     "pysocks>=1.7.1",
     "pytest>=9.0.1",
+    "python-multipart>=0.0.20",
     "python-socks>=2.8.0",
     "sqlalchemy>=2.0.35",
     "statsmodels>=0.14.6",
