--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "pytest>=9.0.1",
     "python-multipart>=0.0.20",
     "python-socks>=2.8.0",
+    "pytz>=2025.2",
     "sqlalchemy>=2.0.35",
     "statsmodels>=0.14.6",
     "ta-lib>=0.6.8",
