feat: 添加时区配置支持并优化数据源追踪
refactor(数据库): 重构数据库模型添加data_source字段
feat(配置): 支持通过环境变量配置应用时区
fix(前端): 修复回测结果日期显示问题
style(前端): 优化侧边栏样式和交互
test: 添加时区和数据源相关测试
docs: 更新配置文档说明时区配置选项

--- a/backend/config.yaml
+++ b/backend/config.yaml
@@ -9,6 +9,9 @@ app:
   port: 8000
   debug: true
   secret_key: "your-secret-key"
+  # 时区配置，默认值为Asia/Shanghai
+  # 支持通过环境变量APP_TIMEZONE覆盖
+  timezone: "Asia/Shanghai"
 
 # 日志配置
 logging:
