feat(config): 迁移配置文件格式为TOML并添加相关依赖
- 将配置文件从YAML格式迁移到TOML格式
- 添加tomli和tomli-w依赖用于TOML解析和写入
- 更新.gitignore忽略frontend2目录
- 修改配置管理代码以支持TOML格式
- 添加测试配置文件和相关测试用例

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,6 +39,8 @@ dependencies = [
     "sqlalchemy>=2.0.35",
     "statsmodels>=0.14.6",
     "ta-lib>=0.6.8",
+    "tomli>=2.1.0",
+    "tomli-w>=1.1.0",
     "torch>=2.9.1",
     "torchaudio>=2.9.1",
     "torchvision>=0.24.1",
