--- a/frontend/src/plugins/demo-plugin/manifest.json
+++ b/frontend/src/plugins/demo-plugin/manifest.json
@@ -2,7 +2,7 @@
   "name": "demo-plugin",
   "version": "1.0.0",
   "description": "前端插件demo",
-  "author": "QBot Team",
+  "author": "QuantCell Team",
   "main": "index.tsx",
   "dependencies": []
 }
