--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "python-socks>=2.8.0",
     "pytz>=2025.2",
+    "pyzmq>=27.1.0",
     "sqlalchemy>=2.0.35",
     "statsmodels>=0.14.6",
     "ta-lib>=0.6.8",
