--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@tauri-apps/plugin-log": "^2.7.1",
     "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-shell": "^2.3.3",
+    "@types/uuid": "^11.0.0",
     "@web3icons/react": "^4.1.9",
     "antd": "^6.1.2",
     "axios": "^1.13.2",
@@ -33,6 +34,7 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.1",
     "react-router-dom": "^7.11.0",
+    "uuid": "^13.0.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
