feat(策略引擎): 实现基于Numba的统一策略引擎架构
新增统一策略引擎核心模块，支持回测和实盘两种模式：
1. 添加core模块包含策略基类、事件引擎和向量引擎
2. 实现trading_modules模块支持永续合约和高精度计算
3. 新增adapters模块提供向量回测适配器
4. 添加测试脚本和完整文档
5. 更新.gitignore排除.DS_Store和编译文件
6. 添加numba依赖提升性能
7. 重命名数据库文件为quantcell_sqlite.db

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@ backend/strategies/*
 .shared/ui-ux-pro-max/*
 backend/backtest/results/*.json
 frontend2/
-*/.DS_Store
-.DS_Store
+**/.DS_Store
+*.so
+**/__pycache__/
