--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "torchaudio>=2.9.1",
     "torchvision>=0.24.1",
     "tqdm>=4.67.1",
+    "typer>=0.20.0",
     "uvicorn>=0.38.0",
     "vectorbt>=0.28.2",
     "xgboost>=3.1.2",
