feat: 添加策略日志模块和独立数据下载功能
refactor(backtest): 重构数据完整性检查器和数据下载器

fix(data_integrity): 修复数据库连接懒加载问题

docs: 添加数据CLI工具帮助手册

test: 添加序列化和适配器调试脚本

chore: 更新.gitignore排除.DS_Store文件

style: 格式化代码和文档

perf(backtest): 优化数据下载性能

build: 添加依赖项和配置

ci: 更新CI配置

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ backend/quantcell/backtest/results/*.json
 quantcell.egg-info/*
 backend/.trash/
 .trash/*
+.DS_Store
+backend/.DS_Stores
+backend/backtest/results/*
+.DS_Store
