--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pytest-asyncio>=0.23.0",
     "aiohttp>=3.13.2",
     "aiohttp-socks>=0.11.0",
     "alembic>=1.17.2",
@@ -51,4 +52,18 @@ dependencies = [
     "uvicorn>=0.38.0",
     "vectorbt>=0.28.2",
     "xgboost>=3.1.2",
+    "yfinance>=1.1.0",
+]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = "-v --tb=short"
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+    "asyncio: marks tests as async",
 ]
