--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "xgboost>=3.1.2",
     "yfinance>=1.1.0",
     "ruff>=0.12.12",
+    "backtrader>=1.9.78.123",
 ]
 
 [tool.pytest.ini_options]
