feat(worker): 新增Worker进程管理模块
实现Worker进程管理核心功能，包括：
- Worker进程生命周期管理
- 基于ZeroMQ的进程间通信
- 数据订阅和分发机制
- 进程池管理
- 进程监控和故障恢复

新增测试模块和文档说明，完善项目依赖配置

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "python-socks>=2.8.0",
     "pytz>=2025.2",
     "pyzmq>=27.1.0",
+    "setproctitle>=1.3.7",
     "sqlalchemy>=2.0.35",
     "statsmodels>=0.14.6",
     "ta-lib>=0.6.8",
