feat: 添加实盘交易模拟测试系统及性能测试框架
新增实盘交易模拟测试系统，支持历史数据回放、策略验证和实时监控。同时添加性能测试框架

新增功能包括：
- 实盘交易模拟系统核心模块
- 性能测试框架与适配器
- 连接认证模块
- 测试策略示例
- 配置文件与报告生成
- 单元测试与集成测试

修改内容：
- 更新.gitignore文件
- 调整config.toml配置
- 删除旧测试目录

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ backend/backtest/results/*
 backend/plugins/*
 frontend/src/plugins/*
 temp/.*
+backend/performance_reports/*.json
+backend/performance_reports/*.md
+backend/performance_reports/*.csv
