feat(binance): 实现Binance交易所集成模块
添加Binance交易所REST API客户端、WebSocket连接和模拟交易功能
- 实现BinanceClient处理REST API请求
- 添加BinanceWebSocketManager管理WebSocket连接和数据订阅
- 创建PaperTradingAccount模拟交易功能
- 添加完整的配置模型和异常处理
- 包含单元测试、集成测试和性能测试
- 提供详细的使用文档和示例配置

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -55,6 +55,7 @@ dependencies = [
     "yfinance>=1.1.0",
     "ruff>=0.12.12",
     "backtrader>=1.9.78.123",
+    "python-binance>=1.0.34",
 ]
 
 [tool.pytest.ini_options]
