--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pytest-asyncio>=0.23.0",
+    "pytest-timeout>=2.3.0",
     "aiohttp>=3.13.2",
     "aiohttp-socks>=0.11.0",
     "alembic>=1.17.2",
@@ -66,6 +67,7 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short --strict-markers"
+timeout = 30
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "asyncio: marks tests as async",
@@ -75,6 +77,7 @@ markers = [
     "auth: marks tests as authentication tests",
     "schema: marks tests as schema validation tests",
     "error: marks tests as error handling tests",
+    "timeout: marks tests with timeout",
 ]
 filterwarnings = [
     "ignore::DeprecationWarning",
