feat: 添加NautilusTrader回测引擎支持及策略框架重构
refactor(backend/strategy/core): 重构策略基类，新增Strategy和StrategyConfig类
feat(backend/backtest): 添加NautilusTrader引擎支持及相关配置模块
docs: 更新README添加回测引擎说明文档
test: 添加新策略和引擎的测试用例
chore: 更新pyproject.toml添加nautilus_trader依赖

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -57,6 +57,7 @@ dependencies = [
     "ruff>=0.12.12",
     "backtrader>=1.9.78.123",
     "python-binance>=1.0.34",
+    "nautilus_trader>=1.222.0",
 ]
 
 [tool.pytest.ini_options]
@@ -78,6 +79,7 @@ markers = [
     "schema: marks tests as schema validation tests",
     "error: marks tests as error handling tests",
     "timeout: marks tests with timeout",
+    "benchmark: marks tests as performance benchmarks",
 ]
 filterwarnings = [
     "ignore::DeprecationWarning",
