feat(backtest): 添加NautilusTrader支持并优化数据适配器
添加NautilusTrader回测引擎支持
实现事件驱动策略基类和配置
优化数据适配器以支持CSV/Parquet文件加载
延迟导入模块以提高CLI响应速度
添加测试数据样本
更新文档和版本号

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ temp/.*
 backend/performance_reports/*.json
 backend/performance_reports/*.md
 backend/performance_reports/*.csv
+QuantCell.code-workspace
