--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^6.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@tabler/icons-react": "^3.37.1",
+    "@web3icons/react": "^4.1.17",
     "ahooks": "^3.9.6",
     "antd": "^6.2.3",
     "axios": "^1.13.2",
